--- a/singlepage.html
+++ b/singlepage.html
@@ -184,10 +184,14 @@
                     <p class="main_menu_bottom_top_block_text">DESIGNER:<span class="main_menu_bottom_top_block_text_other"> BINBURHAN</span></p>    
                 </div>
                 <h2 class="main_menu_bottom_top_coasttext" >$561</h2>
-                
+
             </div>
             <div class="main_menu_bottom_bot">
-
+                <button class="main_content_button">
+                    <a href="" class="main_content_button_link"
+                      ><span class="main_content_button_text"><img  src="/img/bascet_single_page.png" alt="">Add to Cart</span></a
+                    >
+                  </button>
             </div>             
 
 
